--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8762
 
 #Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_pertamina
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_mesc_dev
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=dbpassword
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
