--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8762
 
 #Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_mesc
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_pertamina_plaju
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 app.jwt.secret-key=p3RT4MiN40kE
 
 # Set the maximum allowed file size in bytes
-spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-file-size=102MB
 
 # Set the maximum request size in bytes
-spring.servlet.multipart.max-request-size=2MB
+spring.servlet.multipart.max-request-size=102MB
